# index2Free

./: .clang-format  .clang-format-ignore  .cmake-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  build.sh  build_all_presets.sh  build_default_debug.sh  conanfile copy.py  conanfile.py  docker-build.sh  docker-compose.yml  docker-run.sh  docon-build.sh  docon-clean.sh  docon-set.sh  entrypoint.sh  index2.code-workspace
.github/workflows/: linux.yml  macos.yml
assets/: customstrings.json  ems-mini-nologo-noconsole.html  ems-mini.html
assets/shaders/dyinguniverse/: fragment_def.hpp  vertex_def.hpp
cmake/: tmplt-assets.cmake  tmplt-debug.cmake  tmplt-emscripten.cmake  tmplt-hardening.cmake  tmplt-ipo.cmake  tmplt-runtime.cmake  tmplt-sanitizer.cmake
include/CoreLib/: CoreLib.hpp
include/LibCore/: LibCore.hpp
local_packages/opengl-system/: conanfile.py
src/: CoreLib.cpp  LibCore.cpp
src/Assets/: AssetContext.cpp  AssetContext.hpp
src/Gui/: BackgroundMagic.cpp  BackgroundMagic.hpp  DesktopPlatform.cpp  DesktopPlatform.hpp  EmscriptenPlatform.cpp  EmscriptenPlatform.hpp  GuiStrings.hpp  InputHandler.cpp  InputHandler.hpp  PlatformManager.cpp  PlatformManager.hpp  TextureTools.hpp  WebPlatform.cpp.preparation  WebPlatform.hpp.preparation
src/Logger/: Logger.cpp  Logger.hpp
src/Shaders/: ShaderConvertor.cpp  ShaderConvertor.hpp
src/Shaders/Shadertoy/: Abug.hpp  Anothercube.hpp  Bluemoonocean.hpp  Bubbles.hpp  Chainy.hpp  Dyinguniverse.hpp  Empty.hpp  Fireflame.hpp  Fractaltrees.hpp  Glasscube.hpp  Happyjumping.hpp  Phosphor3.hpp  Seascape.hpp  SimpleTest.hpp  Singularity.hpp  Spiralsnake.hpp  Sunset.hpp  Sunset2.hpp  Synthwave.hpp  Tunnel.hpp  WebGL2Test.hpp
src/Shaders/dyinguniverse/: fragment_def.hpp  fragment_def_bubbles.hpp  fragment_def_rainbowvortex.hpp  fragment_def_stars.hpp  vertex_def.hpp
src/Utils/: Utils.cpp  Utils.hpp
standalone/: CMakeLists.txt
standalone/src/: AppCore.hpp  Main.cpp
standalone/tests/: CMakeLists.txt  LibTester.cpp  LoggerTest.cpp  README_LoggerTest.md
